compiler-core/src/go/tests/snapshots/gleam_core__go__tests__externals__duplicate_import.snap
---
source: compiler-core/src/go/tests/externals.rs
expression: "\n@external(go, \"the/module\", \"Dup\")\npub fn one() -> Nil\n\n@external(go, \"the/module\", \"Dup\")\npub fn two() -> Nil\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(go, "the/module", "Dup")
pub fn one() -> Nil

@external(go, "the/module", "Dup")
pub fn two() -> Nil


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  module_P "the/module"
)

const _ = gleam_P.Use_Import
const _ = module_P.Use_Import
const Use_Import byte = 0

func One() gleam_P.Nil_t {
  return module_P.Dup()
}

func Two() gleam_P.Nil_t {
  return module_P.Dup()
}
