compiler-core/src/go/tests/snapshots/gleam_core__go__tests__externals__type_.snap
---
source: compiler-core/src/go/tests/externals.rs
expression: pub type Thing
snapshot_kind: text
---
----- SOURCE CODE
pub type Thing

----- COMPILED GO
package mod_P

const Use_Import byte = 0

type Thing_t = any
