compiler-core/src/go/tests/snapshots/gleam_core__go__tests__externals__type_without_attribute.snap
---
source: compiler-core/src/go/tests/externals.rs
expression: pub type Thing
snapshot_kind: text
---
----- SOURCE CODE
pub type Thing

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

type Thing_t interface{iThing_t(); gleam_P.Type[Thing_t]}
